Adding hero section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <title>Artsel</title>
+    <link href="dist/css/main.min.css" rel="stylesheet">
+    <link href="dist/libs/swiper-bundle.min.css" rel="stylesheet">
 </head>
 <body>
-
+    <section class="container hero-section">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slide-social-wrapper">
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#messenger"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="slide-image-wrapper">
+                        <div class="triangle triangle1"></div>
+                        <div class="triangle triangle2"></div>
+                        <div class="triangle triangle3"></div>
+                        <div class="triangle triangle4"></div>
+                        <div class="triangle triangle5"></div>
+                        <div class="triangle triangle6"></div>
+                        <img src="dist/images/photo1.jpg" alt="photo1">
+                    </div>
+                    <div class="slide-info">
+                        <p>John Doe</p>
+                        <p>Managing Partner</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-social-wrapper">
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#messenger"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="slide-image-wrapper">
+                        <div class="triangle triangle1"></div>
+                        <div class="triangle triangle2"></div>
+                        <div class="triangle triangle3"></div>
+                        <div class="triangle triangle4"></div>
+                        <div class="triangle triangle5"></div>
+                        <div class="triangle triangle6"></div>
+                        <img src="dist/images/photo2.jpg" alt="photo2">
+                    </div>
+                    <div class="slide-info">
+                        <p>John Doe</p>
+                        <p>Managing Partner</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-social-wrapper">
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#messenger"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="slide-image-wrapper">
+                        <div class="triangle triangle1"></div>
+                        <div class="triangle triangle2"></div>
+                        <div class="triangle triangle3"></div>
+                        <div class="triangle triangle4"></div>
+                        <div class="triangle triangle5"></div>
+                        <div class="triangle triangle6"></div>
+                        <img src="dist/images/photo1.jpg" alt="photo1">
+                    </div>
+                    <div class="slide-info">
+                        <p>John Doe</p>
+                        <p>Managing Partner</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-social-wrapper">
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#messenger"></use>
+                            </svg>
+                        </a>
+                        <a href="#" target="_blank" class="slide-social-link">
+                            <svg width="22" height="22">
+                                <use xlink:href="dist/images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="slide-image-wrapper">
+                        <div class="triangle triangle1"></div>
+                        <div class="triangle triangle2"></div>
+                        <div class="triangle triangle3"></div>
+                        <div class="triangle triangle4"></div>
+                        <div class="triangle triangle5"></div>
+                        <div class="triangle triangle6"></div>
+                        <img src="dist/images/photo2.jpg" alt="photo2">
+                    </div>
+                    <div class="slide-info">
+                        <p>John Doe</p>
+                        <p>Managing Partner</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="dist/libs/swiper-bundle.min.js"></script>
+    <script src="dist/js/main.min.js"></script>
 </body>
 </html>
