Adding about us section

--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
             </div>
         </div>
     </section>
+    <section class="container about-section">
+        <div class="mill-wrapper">
+            <img src="dist/images/mill.png" alt="mill">
+        </div>
+        <div class="about-info">
+            <h1>Our way</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maiores nihil nulla placeat porro veritatis. Ad asperiores distinctio eligendi, impedit in perferendis? Aliquam ducimus enim eveniet, id nemo soluta voluptate.</p>
+            <a href="#">More about us</a>
+            <div class="triangle triangle1"></div>
+            <div class="triangle triangle2"></div>
+            <div class="triangle triangle3"></div>
+            <div class="triangle triangle4"></div>
+        </div>
+    </section>
     <script src="dist/libs/swiper-bundle.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
