--- a/index.html
+++ b/index.html
@@ -156,6 +156,30 @@
             <div class="triangle triangle4"></div>
         </div>
     </section>
+    <section class="container contact-section">
+        <h2>Contact</h2>
+        <form id="contact-form" method="get" class="contact-form">
+            <div class="form-row name-row">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="John Doe">
+                <span>Please complete this name field.</span>
+            </div>
+            <div class="form-row email-row">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="johndoe@gmail.com">
+                <span>Please complete this email field.</span>
+                <span>This email does not seem to look right.</span>
+            </div>
+            <div class="form-row message-row">
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message" placeholder="Tell us what you need and we’ll take care of the rest."></textarea>
+                <span>Please complete this message field.</span>
+            </div>
+            <div class="form-row">
+                <button type="submit" class="form-submit" id="submit" disabled>Send Message</button>
+            </div>
+        </form>
+    </section>
     <script src="dist/libs/swiper-bundle.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
